--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -5,26 +5,22 @@
 
 
 {% block body %}
-{{ custom_data | lower }}
+    {{ custom_data | lower }}
+    <br> <a href="{% url 'news_index' %}">index</a>
+    {% current_time '%Y %m %d - %I:%M:%p' %}
+    <br>
+    {% for item in news %}
+        {{ forloop.counter }}
+        <h1>{{ item.title }}</h1>
+        <h2>{{ item.body }}</h2>
+        <h3>{{ item.updated_at | naturaltime }}</h3>
+    {% endfor %}
 
-<br>
-
-{% current_time '%Y %m %d - %I:%M:%p' %}
-
-<br>
-
-{#{% for item in news %}#}
-{#    {{ forloop.counter }}#}
-{#    <h1>{{ item.title }}</h1>#}
-{#    <h2>{{ item.body }}</h2>#}
-{#    <h3>{{ item.updated_at | naturaltime }}</h3>#}
-{#{% endfor %}#}
-
-{% last_news 2 as last_two_news %}
-{% for item in last_two_news %}
-    {{ forloop.counter }}
-    <h1>{{ item.title }}</h1>
-    <h2>{{ item.body }}</h2>
-    <h3>{{ item.updated_at | naturaltime }}</h3>
-{% endfor %}
+    {% last_news 2 as last_two_news %}
+    {% for item in last_two_news %}
+        {{ forloop.counter }}
+        <h1>{{ item.title }}</h1>
+        <h2>{{ item.body }}</h2>
+        <h3>{{ item.updated_at | naturaltime }}</h3>
+    {% endfor %}
 {% endblock %}
