--- a/_project_v1_/templates/news/index.html
+++ b/_project_v1_/templates/news/index.html
@@ -1,21 +1,19 @@
 {% extends 'base.html' %}
 
 {% load humanize %}{# https://docs.djangoproject.com/en/1.8/ref/contrib/humanize/#}
-{% load news-extras %}
 
 {% block content %}
 {{ custom_data | lower }}
 
 <br><a href="{% url 'news:news_index' %}">index</a>
-
-{% current_time '%Y %m %d - %I:%M:%p' %}
-
 <br>
-{% last_news 2 as last_two_news %}
-{% for item in last_two_news %}
-    {{ forloop.counter }}
-    <h1>{{ item.title }}</h1>
-    <h2>{{ item.body }}</h2>
-    <h3>{{ item.updated_at | naturaltime }}</h3>
+{% for item in news %}
+    <h1>{{ forloop.counter }}. {{ item.title }} <span style="color: gray">{{ item.updated_at | naturaltime }}</span></h1>
+    <p>{{ item.body }}</p>
+    <ul class="attachments">
+        {% for x in item.attachment_set.all %}
+            <a href="{{ MEDIA_URL }}{{ x.file }}">{{ x.name }}</a>
+        {% endfor %}
+    </ul>
 {% endfor %}
 {% endblock %}
